--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -180,6 +180,9 @@ https://zksync.io/api/v0.1.html (KEEP AN EYE OUT FOR V2 DOCS AS WELL)
 Slashdot news feed said it imported in logs during cached config upgrade, BUT IT NEVER DID.
 
 
+Demo install on biz site is crapping out in the middle of running cron jobs, leaving /cache/events/cron-runtime-lock.dat in the cache...started around 10pm tuesday night. 
+
+
 Add to resources page:
 https://www.validators.app/
 
