docs, Fixed the ability for Telegram to gracefully process messages over 4096 bytes in size (large messages are now split into multiple smaller messages automatically)
docs, Fixed the ability for Telegram to gracefully process messages over 4096 bytes in size (large messages are now split into multiple smaller messages automatically)

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -202,6 +202,10 @@ $update_config_error
 
 $admin_general_success
 
+$telegram_user_data
+
+$telegram_messaging
+
 
 Move all admin-related functions into the new 'ct_admin' PHP class.
 
