--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6442,6 +6442,38 @@ AND MIGRATE YOUR EXISTING CUSTOM NEWS FEEDS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+6.00.31:
+
+-BUG FIX: Fixed the ability for Telegram to gracefully process messages over 4096 bytes in size (large messages are now split into multiple smaller messages automatically)
+
+-BUG FIX: Miscellaneous fixes
+
+-Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): Price Charts / Alerts
+
+-Miscellaneous user experience improvements
+
+-Code optimization / cleanup
+
+-Updated documentation
+
+IMPORTANT *UPGRADE* NOTICE:
+
+v6.00.31 and higher restructures the price alerts / price charts config formatting. USE THE LATEST/UPGRADED CONFIG.PHP,
+AND MIGRATE YOUR EXISTING CUSTOM PRICE ALERTS / PRICE CHARTS TO THE NEW FORMAT.
+
+v6.00.29 and higher restructures the 'price-target-alert' plugin. USE THE LATEST/UPGRADED PLUG_CONF.PHP,
+AND MIGRATE YOUR EXISTING CUSTOM PRICE TARGET ALERTS TO THE NEW FORMAT.
+
+v6.00.29 and higher renames / restructures MANY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
+AND MIGRATE YOUR EXISTING CUSTOM NEWS FEEDS TO THE NEW FORMAT.
+
+-v6.00.29 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.26 OR LOWER.
+
+-------------------------------------------------------------------
+
+
+
 
 
 
