--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6447,6 +6447,8 @@ AND MIGRATE YOUR EXISTING CUSTOM NEWS FEEDS TO THE NEW FORMAT.
 
 -BUG FIX: Fixed the ability for Telegram to gracefully process messages over 4096 bytes in size (large messages are now split into multiple smaller messages automatically)
 
+-BUG FIX: Created an automatic fix for app servers that do NOT have PHP Session "save path" PROPERLY setup (the app will create / use a SECURED directory for PHP Sessions)
+
 -BUG FIX: Miscellaneous fixes
 
 -Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): Price Charts / Alerts, Mobile Text Gateways
